...
        alertPresenter = AlertPresenter(viewController: self)
        presenter?.viewDidLoad()
    }

    func showAlertExitProfile() {
        let model = AlertModelTwoButton(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            buttonTextOne: "Да",
            buttonTextTwo: "Нет",
            completionOne: { [weak self] in
                guard let self = self else { return }
                presenter?.exitProfile()
            },
            completionTwo: nil
...
