...
    weak var delegate: WebViewViewControllerDelegate?
    private var estimatedProgressObservation: NSKeyValueObservation?
    var presenter: WebViewPresenterProtocol?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        includeEstimatedProgressObservation()
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
    }
    
    @IBAction func didTapBackButton(_ sender: Any?) {
...
