...
        $0.textColor = UIColor(red: 255/255, green: 255/255, blue: 255/255, alpha: 1)
        return $0
    }(UILabel(frame: .zero))
    
    private lazy var logOutButton: UIButton = {
        $0.tintColor = UIColor.ypRed
        $0.accessibilityIdentifier = "logoutButton"
        let image = UIImage(named: "ipad.and.arrow.forward")
        $0.setImage(image, for: .normal)
        $0.addTarget(self, action: #selector(handleLogoutButton), for: .touchUpInside)
      return $0
    }(UIButton(type: .custom))
    
...
